<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img"
        style="@style/ImageView.Tint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_mountain" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/title_dialog_choose_data"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mountanList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:clipToPadding="false"
        android:padding="4dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/selectionText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/listitem_simple">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/noDataMessage"
        style="@style/LinearLayout.Default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/selectionText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.50"
        tools:listitem="@layout/listitem_simple">

        <TextView
            android:id="@+id/messageText"
            style="@style/TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_not_found_create_new" />

        <Button
            android:id="@+id/noData"
            style="@style/Button.Basic.Accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/make_new_data" />
    </LinearLayout>

    <TextView
        android:id="@+id/selectionText"
        style="@style/TextView.Default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="選択中："
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/confirm"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/confirm"
        style="@style/Button.Basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/makeData"
        style="@style/Button.Basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/make_new_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/confirm" />

</android.support.constraint.ConstraintLayout>