<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/time"
                style="@style/TextView.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/data_created"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintTop_toBottomOf="@id/time" />

            <TextView
                android:id="@+id/textView_no_data"
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/none_created_data"
                app:layout_constraintLeft_toLeftOf="@id/time"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/hasData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutAnimation="@anim/layout_animation_fade_in"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:itemCount="3"
                tools:listitem="@layout/listitem_browse" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextView.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/data_not_created"
                app:layout_constraintTop_toBottomOf="@id/hasData" />

            <Spinner
                android:id="@+id/prefSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextView.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="表示中："
                app:layout_constraintBottom_toBottomOf="@id/prefSpinner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/prefSpinner" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prefSpinner"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/data_not_found"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/noData"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_below="@id/prefSpinner"
                android:layout_marginTop="8dp"
                android:layoutAnimation="@anim/layout_animation_fade_in"
                android:padding="8dp"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:layout_constraintDimensionRatio="0.75"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                app:spanCount="2"
                tools:itemCount="10"
                tools:listitem="@layout/listitem_browse_simple" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>